--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroui/card": "^2.2.13",
     "@heroui/modal": "^2.2.8",
     "@heroui/react": "^2.6.14",
+    "@nextui-org/react": "^2.6.11",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "react": "^19.0.0",
